--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  font-family: sans-serif;
-}
-
-li {
-  list-style: none;
-}
-
-.selected {
-  background-color: yellow;
-}
-
-.highlight {
-  color: blueviolet;
+  font-size: 0.9rem;
+  line-height: 1;
 }
